--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.34.2",
     "react-loader-spinner": "^5.3.4",
+    "react-pdf": "^6.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.5",
