--- a/package.json
+++ b/package.json
@@ -1,46 +1,50 @@
 {
-  "name": "profolio",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@react-pdf/renderer": "^3.0.1",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "emailjs-com": "^3.2.0",
-    "framer-motion": "^4.1.17",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.34.2",
-    "react-loader-spinner": "^5.3.4",
-    "react-pdf": "^6.2.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
-    "react-transition-group": "^4.4.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "profolio",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@react-pdf/renderer": "^3.0.1",
+        "@testing-library/jest-dom": "^5.16.1",
+        "@testing-library/react": "^12.1.2",
+        "@testing-library/user-event": "^13.5.0",
+        "emailjs-com": "^3.2.0",
+        "framer-motion": "^4.1.17",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-hook-form": "^7.34.2",
+        "react-icons": "^4.7.1",
+        "react-loader-spinner": "^5.3.4",
+        "react-pdf": "^6.2.0",
+        "react-router-dom": "^6.3.0",
+        "react-scripts": "5.0.0",
+        "react-transition-group": "^4.4.5",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "copy-cmaps": "node ./scripts/cmaps.js",
+        "copy-standard-fonts": "node ./scripts/standard-fonts.js",
+        "copy-worker": "node ./scripts/worker.js",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
