--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.7.1",
+        "react-lazy-load-image-component": "^1.5.6",
         "react-loader-spinner": "^5.3.4",
         "react-pdf": "^6.2.0",
         "react-router-dom": "^6.3.0",
