--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "emailjs-com": "^3.2.0",
         "framer-motion": "^4.1.17",
         "react": "^17.0.2",
+        "react-alert": "^7.0.3",
         "react-dom": "^17.0.2",
         "react-icons": "^4.7.1",
         "react-lazy-load-image-component": "^1.5.6",
@@ -17,6 +18,7 @@
         "react-pdf": "^6.2.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.0",
+        "react-toastify": "^9.1.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
