--- a/package.json
+++ b/package.json
@@ -47,5 +47,9 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "tailwindcss": "^3.3.2",
+        "typescript": "^5.0.4"
     }
 }
